--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,318 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+.main{
+  width: 100%;
+  height: 100vh;
+}
+ Video{
+  margin-left: 100px;
+  margin-right: 100px;
+  margin-top: -50px;
+  height: 700px;
+  width: 1300px;
+ }
+ .content{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: aliceblue;
+ }
+ .our_room_container{
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  color:black;
+ }
+ .our_room_container{
+  margin-top: 100px;
+}
+.our_room_heading h1{
+  text-align: center;
+  margin: 50px;
+  font-size: 50px;
+  color: black;
+}
+.col-md-6{
+  flex: 0 0 50%;
+  max-width: 30%;
+  position: relative;
+  width: 100%;
+  min-height: 1px;
+  padding-right: 15px;
+  padding-left: 15px;
+  display: inline-flex;
+  margin-left: 40px;
+  height: 450px;
+  
+}
+.room{
+  margin-bottom: 50px;
+  background-color: #fff;
+  box-shadow: 0px 15px 16.83px 10px rgba(0, 0, 0, 0.1);
+border-radius: 20px;
+
+}
+.mb-50:hover{
+  transform: rotate(0deg) scale(1.1);
+  overflow: hidden;
+}
+.room_image img{
+  width: 100%;
+  /* transform: rotate(0deg) scale(1); */
+  -webkit-transition: all 0.6s ease-out 0s;
+          transition: all 0.6s ease-out 0s;
+}
+.room_caption h2{
+margin: 20px;
+font-size: 30px;
+
+}
+.room_caption p{
+  margin-left: 20px;
+}
+.room_caption h2:hover{
+  color:blue;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/*About*/
+
+.container_fluid {
+  text-align: center;
+  margin-top: 30px;
+}
+
+.about_container1 {
+  background-color: #fff;
+  margin: 50px;
+  box-shadow: 0px 15px 16.83px 10px rgba(0, 0, 0, 0.1);
+
+}
+
+.about_container3 img {
+  width: 530px;
+  height: 300px;
+  padding: 20px;
+}
+
+.about_container2 {
+  margin-top: 30px;
+  float: right;
+  width: 50%;
+  padding: 20px;
+  text-align: justify;
+
+}
+
+/*Contact*/
+.contact_container1{
+  text-align: center;
+  margin-top: 30px;
+}
+
+.contact_container2{
+  background-color: #fff;
+  margin: 50px;
+  box-shadow: 0px 15px 16.83px 10px rgba(0, 0, 0, 0.1);
+}
+
+.contact_container4 img{
+  width: 530px;
+  height: 300px;
+  padding: 20px;
+}
+
+.contact_container3{
+  margin-top: 30px;
+  float: right;
+  width: 50%;
+  padding: 20px;
+  text-align: justify;
+}
+
+/*Footer */
+footer {
+  width: 100%;
+  position: relative;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  margin-bottom: 0px;
+  top: 700px;
+
+}
+
+.footer_logo a {
+  color: white;
+  font-size: 35px;
+  font-family: 'Orelega One', cursive;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.footer_area {
+  background:black;
+  height: 230px;
+
+}
+
+.col-xl-3 {
+  margin-top: 40px;
+}
+
+.footer_row {
+  margin-top: 50px;
+  margin-left: 30px;
+}
+
+.footer_para p {
+  color: white;
+  font-size: 15px;
+}
+
+.footer_title {
+  color: white;
+}
+
+.footer_social {
+  display: flex;
+  margin: 10px;
+
+  list-style-type: none;
+}
+
+.footer_social li {
+  padding: 5px;
+}
+
+.footer_social li a {
+  text-decoration: none;
+}
+
+.footer_social li a i {
+  width: 30px;
+  height: 30px;
+  color: #fff;
+  font-size: 14px;
+  border-radius: 5px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -o-border-radius: 5px;
+  -ms-border-radius: 5px;
+  transform: translateZ(0);
+  -moz-transform: translateZ(0);
+  -webkit-transform: translateZ(0);
+  -o-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+}
+
+.footer_social li:hover a i {
+  -webkit-transform: scale(1.3) translateZ(0);
+  transform: scale(1.3) translateZ(0);
+}
+
+.zmdi-facebook {
+  background: black;
+}
+
+.zmdi-twitter {
+  background: #1da0f2;
+}
+
+.zmdi-google {
+  background: #e72734;
+}
+
+.roomDetails{
+  border-radius: 12px;
+  font-size: 24px;
+
+  color: white;
+  width: fit-content;
+}
+.guestDetails{
+  border-radius: 12px;
+  font-size: 24px;
+
+  color: white;
+  width: fit-content;
+}
+
+.guestDetails > NavLink {
+ 
+  color: white;
+
+}
+/*owner*/
+.middlelayout{
+  top: 0;
+  background: url(./Images/owner.jpg) no-repeat center;
+  background-size: cover;
+  height: 1000px;
+  position: relative;
+
+}
+/*manager*/
+.manager{
+  background: url(./Images/Manager.jpg) no-repeat center;
+  background-size: cover;
+  
+  height: 1000px;
+  position: relative;
+
+}
+.receptionist{
+  background: url(./Images/receptionist.jpg) no-repeat center;
+  background-size: cover;
+  
+  height: 1000px;
+  position: relative;
+}
+.iroom{
+  background: url(./Images/receptionist.jpg) no-repeat center;
+  background-size: cover;
+  
+  height: 1000px;
+  position: relative;
+}
+.resroom{
+  background: url(./Images/resroom1.jpg) no-repeat center;
+  background-size: cover;
+  
+  height: 1000px;
+  position: relative;
+}
+.groom{
+  background: url(./Images/hroom.jpg) no-repeat center;
+  background-size: cover;
+  
+  height: 1000px;
+  position: relative;
+}
+.hroom{
+  background: url(./Images/hroom1.jpg) no-repeat center;
+  background-size: cover;
+  
+  height: 1000px;
+  position: relative;
+}
+.sroom{
+  background: url(./Images/sroom.jpg) no-repeat center;
+  background-size: cover;
+  
+  height: 1000px;
+  position: relative;
 }
